Input provision almost ready. Only buttons wrapping to next line issue remaining

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,8 @@ html {
   width: 100%;
   justify-content: flex-start;
   align-items: center;
-  column-gap: 5px; }
+  column-gap: 5px;
+  margin: 1rem 0; }
   .rule .var {
     align-self: flex-start;
     font-size: 2.5rem;
@@ -103,7 +104,7 @@ html {
   .rule .expressions {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-start;
     flex: 0 0 80%;
     column-gap: 5px; }
     .rule .expressions .input-text {
@@ -113,12 +114,14 @@ html {
       text-align: center;
       border: none;
       flex: 0 0 20%;
-      width: 75%; }
+      width: 75%;
+      margin: 0 0 1rem 0; }
       .rule .expressions .input-text:focus {
         background-color: white; }
     .rule .expressions .expr-sep {
       font-size: 2.5rem;
-      color: white; }
+      color: white;
+      margin: 0 0 1rem 0; }
     .rule .expressions .btn {
       border-radius: 50px;
       border: 0;
@@ -128,7 +131,8 @@ html {
       color: white;
       font-size: 2.5rem;
       align-self: center;
-      cursor: pointer; }
+      cursor: pointer;
+      margin: 0 0 1rem 0; }
 
 .add-rule-expression {
   background-color: #0bbf4d; }
