--- a/scss/_app.scss
+++ b/scss/_app.scss
@@ -31,6 +31,7 @@
     justify-content: flex-start;
     align-items: center;
     column-gap: 5px;
+    margin: 1rem 0;
 
     & .var {
         align-self: flex-start;
@@ -42,7 +43,7 @@
     & .expressions {
         display: flex;
         flex-wrap: wrap;
-        align-items: center;
+        align-items: flex-start;
         flex: 0 0 80%;
         column-gap: 5px;
 
@@ -54,6 +55,7 @@
             border: none;
             flex: 0 0 20%;
             width: 75%;
+            margin: 0 0 1rem 0;
 
             &:focus {
                 background-color: white;
@@ -63,6 +65,7 @@
         & .expr-sep {
             font-size: $rule-font-size;
             color: white;
+            margin: 0 0 1rem 0;
         }
 
         & .btn {
@@ -75,6 +78,7 @@
             font-size: $rule-font-size;
             align-self: center;
             cursor: pointer;
+            margin: 0 0 1rem 0;
         }
     }
 }
